--- a/1-layout-UniC/resources/main.css
+++ b/1-layout-UniC/resources/main.css
@@ -6,7 +6,7 @@
 main {
     width: 100%;
     height: 100vh;
-    background-image: url("../../assignments/1-geometric/bg.jpg");
+    background-image: url("../assets/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -99,7 +99,7 @@ section button {
     font-size: 16px;
     padding: 0.5em 2.5em;
     text-transform: uppercase;
-    width: 20%;
+    width: 25%;
     margin-top: 9em;
     color:#fff;
 }
